--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Carp-Clan-6.04.tar.gz: c280f20b15ec960af16e1b23d01864a9597332e0
 sources:
-  "Carp-Clan-6.04.tar.gz": c280f20b15ec960af16e1b23d01864a9597332e0
+  Carp-Clan-6.06.tar.gz: 32a064674f12c12e2ac6f745a92429f7571c455f
